# scraping-clinica-medica

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.base  Dockerfile.worker  README.md  api.py  cancel_appointment.py  celery_worker.py  cron_sync_appointments.py  instantiate_chrome.bat  main.py  parse_clinic_report.py  prefect.yaml  pyproject.toml  schedule_appointment.py  scraper.py  upload_to_supabase.py  verify_doctors_calendar.py
app/: orchestrator.py  run_parallel.py  run_sync.py
app/api/: main.py
app/api/routes/: appointments.py  health.py  scraping.py
app/api/schemas/: common.py  internal_models.py  responses.py
app/core/: config.py  database.py  dependencies.py
app/flows/: daily_sync_flow.py  history_flow.py  next_appointments_flow.py  patient_flow.py
app/models/: agendamento.py  dados_cliente.py  enums.py  profissionais.py  telefones_paciente.py
app/scraper/: appointment_canceller.py  appointment_scheduler.py  availability_checker.py  base.py  get_active_patients.py  next_appointments.py  patient_history_scraper.py
app/services/: appointment_sync.py  doctor_service.py  history_seed.py  next_appointments_seed.py  patient_code_sync.py  patient_cpf_sync.py  patient_seed.py
app/worker/: celery_app.py  tasks.py
data/: appointments.sql
